Backend (Hasta Controller)
Falta testear con datos 'reales' en la base de datos.

--- a/WebAPI_Grupo8_TPI/WebAPI_Grupo8_TPI/appsettings.json
+++ b/WebAPI_Grupo8_TPI/WebAPI_Grupo8_TPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+    "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\ME;Initial Catalog=FarmaciaTPPII;Integrated Security=True;Trust Server Certificate=True"
+    
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
